Guard test property reads with TestUtil to log any expected properties that are not set (#1504)
Fixes #1503

Signed-off-by: Scott M Stark <starksm64@gmail.com>